menu alignment fix for phone

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -19,8 +19,10 @@ nav {
 	padding-top:0!important;
 	padding-bottom:0!important;
 
-	li.nav-item:first-child {
-		margin-top: 0;
+	@include media-breakpoint-up(tablet) {
+		li.nav-item:first-child {
+			margin-top: 0;
+		}
 	}
 }
 
